fix: adjust the condition for slides to have the brightness style applied in full bleed mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -230,7 +230,11 @@
 
   .embla__slide {
     max-width: calc(var(--slideshow-width) - var(--border-size) * 2);
+  }
+}
 
+:host([fullBleed]:not([autoscroll])) {
+  .embla__slide {
     &:not(.active) {
       filter: brightness(65%);
     }
